istio/frontend/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: app
  labels:
    name: frontend
    environment: poc 
spec:
  gateways:
  - default/app
  hosts:
  - app.mcrpv.in
  http:
  - route:
    - destination:
        host: frontend-v1
        port:
          number: 80
        subset: v1
      weight: 50
    - destination:
        host: frontend-v2
        port:
          number: 80
        subset: v2
      weight: 50
